minor: bugfix: style: loading animation alignment

--- a/dcc-portal-ui/app/styles/styles.scss
+++ b/dcc-portal-ui/app/styles/styles.scss
@@ -412,6 +412,9 @@ a.no-style {
   }
   i {
     height: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   img {
     height: 3rem;
